update missing-gazette template tile and tag

--- a/missing-gazettes.html
+++ b/missing-gazettes.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Failed Gazettes
-pagetag: failed gazettes
+title: Missing Gazettes
+pagetag: missing - gazettes
 ---
 <section class="resources" id="failed_gaz">
   <h4>Missing Gazettes</h4>
