[Feature] Set build file to use jsonlines filename from json file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ jurisdiction_abbrev: NG
       <div class="col-sm-6 col-sm-offset-3">
 
         <h2>{{ page.jurisdiction }} Gazettes</h2>
-        <a class="btn_p" href="/gazettes/{{ page.jurisdiction_abbrev }}/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">{{ page.jurisdiction_adjective }} Government Gazettes</span></button></a>
+        <a class="btn_p" href="/gazettes/{{ page.jurisdiction_abbrev }}/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">{{ page.jurisdiction_name }} Government Gazettes</span></button></a>
       </div>
     </div>
   </div>
