[Chore] Change jurisdiction abbrev variable to jurisdition code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body_class: home
       <div class="col-sm-6 col-sm-offset-3">
 
         <h2>{{ site.jurisdiction }} Gazettes</h2>
-        <a class="btn_p" href="/gazettes/{{ site.jurisdiction_abbrev }}/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">{{ site.jurisdiction_adjective }} Government Gazettes</span></button></a>
+        <a class="btn_p" href="/gazettes/{{ site.jurisdiction_code }}/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">{{ site.jurisdiction_adjective }} Government Gazettes</span></button></a>
       </div>
     </div>
   </div>
